# ctraces

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  lint.yaml  packages.yaml
cmake/: headers.cmake  libraries.cmake
examples/: CMakeLists.txt  otlp-decoder.c  otlp.c  simple.c
include/ctraces/: ctr_attributes.h  ctr_compat.h  ctr_id.h  ctr_link.h  ctr_resource.h  ctr_sds.h  ctr_span.h  ctraces.h
include/opentelemetry/: opentelemetry_common.pb-c.h  opentelemetry_resource.pb-c.h  opentelemetry_trace.pb-c.h  opentelemetry_trace_service.pb-c.h
lib/monkey/include/: CMakeLists.txt
src/: CMakeLists.txt  ctr_attributes.c  ctr_decode_msgpack.c  ctr_decode_opentelemetry.c  ctr_encode_msgpack.c  ctr_encode_opentelemetry.c  ctr_encode_text.c  ctr_id.c  ctr_mpack_utils.c  ctr_random.c  ctr_resource.c  ctr_sds.c  ctr_span.c  ctraces.c
tests/: CMakeLists.txt  basic.c  ctr_tests.h  decoding.c  opentelemetry.c  span.c
